更新一下文档

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1140,8 +1140,9 @@ PhysicsAssetEditor.TimeStamp=2021.11.08-09.04.46
 PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Level/Track1.Track1:PersistentLevel.Track1
+OpenAssetsAtExit=/Game/SiteBlueprint/BP_Destination.BP_Destination
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2345,7 +2346,7 @@ ContentBrowserTab1.ActiveTypeFilters=World
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=
+ContentBrowserTab1.SelectedPaths=/Classes_Game/CycleRacingProject
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.SelectedCollections=
@@ -2402,6 +2403,7 @@ MRUItem19=/Game/Cars/Sedan/Blueprints/Sedan
 /Game/VehicleAdv/Vehicle/VehicleSkeleton.VehicleSkeleton=1
 /Game/Level/SnowfieldLevel.SnowfieldLevel:PersistentLevel.SnowfieldLevel=1
 /Game/SiteBlueprint/BP_Destination.BP_Destination=1
+/Game/Level/Track1.Track1:PersistentLevel.Track1=1
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -2484,7 +2486,7 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 WorldSettings="\"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" "
-Info=
+Info="\"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" "
 ChaosWheeledVehicleMovementComponent="\"Object.WheelSetup.WheelSetups\" \"Object.WheelSetup.WheelSetups.WheelSetups[0]\" \"Object.WheelSetup.WheelSetups.WheelSetups[1]\" \"Object.WheelSetup.WheelSetups.WheelSetups[2]\" \"Object.WheelSetup.WheelSetups.WheelSetups[3]\" "
 ChaosVehicleMovementComponent="\"Object.WheelSetup.WheelSetups\" \"Object.WheelSetup.WheelSetups.WheelSetups[0]\" \"Object.WheelSetup.WheelSetups.WheelSetups[1]\" \"Object.WheelSetup.WheelSetups.WheelSetups[2]\" \"Object.WheelSetup.WheelSetups.WheelSetups[3]\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -2524,8 +2526,8 @@ Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletonEditor",Commands=)
 
 [RootWindow]
-ScreenPosition=X=640.000 Y=334.400
-WindowSize=X=1289.600 Y=729.600
+ScreenPosition=X=482.400 Y=248.000
+WindowSize=X=1290.400 Y=730.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2608,7 +2610,7 @@ CollisionProfile=True
 Warning_ReparentTitle=False
 
 [Directories2]
-UNR=E:/ue_project/CycleRacingProject/Content/BeachScene/Maps
+UNR=E:/ue_project/CycleRacingProject/Content/Level
 BRUSH=E:/ue_project/CycleRacingProject/Content/
 FBX=E:/ue_project/CycleRacingProject/Content/
 FBXAnim=E:/ue_project/CycleRacingProject/Content/
